# kinect_rgb_calibration

./: README.md
depth2cloudV0.1/: readme.txt
depth2cloudV0.1/src/: depth2cloud_node.cpp
depth2cloudV0.2/: CMakeLists.txt  CMakeLists.txt_test  package.xml  readme.txt
depth2cloudV0.2/data/: Homography.txt
depth2cloudV0.2/data/022151343547/: calib_color.yaml  calib_depth.yaml  calib_pose.yaml
depth2cloudV0.2/include/: depth2cloud.hpp
depth2cloudV0.2/src/: depth2cloud_node.cpp  depth2cloud_test.cpp
hotspot2PointCLoud/: readme.txt
hotspot2PointCLoud/data/: mesh.pcd
hotspot2PointCloud/: CMakeLists.txt
hotspot2PointCloud/src/: hotspot2PointCloud.cpp
hotspotFusion/cloudICP/: CMakeLists.txt  readme.txt
hotspotFusion/cloudICP/data/: desk.pcd
hotspotFusion/cloudICP/src/: cloudIPC.cpp
hotspotFusion/fusion_with_camera_pose/: CMakeLists.txt  readme.txt
hotspotFusion/fusion_with_camera_pose/include/: cv_eigen.hpp
hotspotFusion/fusion_with_camera_pose/src/: fusionHotspotWithCameraPose.cpp
iai_kinect2/: readme.txt
iai_kinect2/kinect2_bridge/data/022151343547/: calib_ir.yaml  calib_pose.yaml
iai_kinect2/kinect2_bridge/include/kinect2_bridge/: kinect2_definitions.h
iai_kinect2/kinect2_bridge/launch/: kinect2_bridge.launch
iai_kinect2/kinect2_bridge/src/: kinect2_bridge.cpp
iai_kinect2/kinect2_calibration/src/: kinect2_calibration.cpp
iai_kinect2/kinect2_viewer/: CMakeLists.txt  README.md
iai_kinect2/kinect2_viewer/src/: viewer.cpp
rgbd_slam/: CMakeLists.txt  package.xml  readme.txt
rgbd_slam/ORB_SLAM2_modified/: CMakeLists.txt  build.sh
rgbd_slam/ORB_SLAM2_modified/include/: System.h  pointcloudmapping.h
rgbd_slam/ORB_SLAM2_modified/src/: System.cc  Viewer.cc  pointcloudmapping.cc
rgbd_slam/ORB_SLAM2_modified/yaml/: TUM.yaml  kinect2.yaml
rgbd_slam/include/: denseMap.hpp  depth2cloud.hpp
rgbd_slam/launch/: rgbd_slam.launch
rgbd_slam/src/: ctm_slam.cpp  rgbd_slam_node.cpp  rgbd_tum.cpp  saveTUMDataset.cpp
txt2pcd/: CMakeLists.txt  readme.txt
txt2pcd/data/: meshData.txt
txt2pcd/src/: main.cpp
